# reactive-state-machine

./: .clang-format  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMMIT_FORMAT.md  LICENSE  README.md  build.sh  setup-hooks.sh  test-results.html  w3c_test_results.xml
examples/traffic_light/: CMakeLists.txt  main.cpp  traffic_light.scxml
generator/: CMakeLists.txt
generator/include/: Logger.h  types.h
generator/include/codegen/: CodeGenerator.h
generator/include/common/: ErrorCategories.h  ErrorHandler.h  GracefulJoin.h  GuardUtils.h  IStateMachine.h  IdGenerator.h  Logger.h  PerformanceUtils.h  Result.h  SCXMLCommon.h  SCXMLConstants.h  StateMachine.h  TypeSafeCallback.h  TypeSafeHttpCallback.h  TypeSafeJSEngine.h  TypeSafeMemoryManager.h  TypeSafeXPath.h
generator/include/core/: ActionNode.h  ContentNode.h  DataModel.h  DataModelItem.h  DataNode.h  DoneDataNode.h  FinalNode.h  ForeachNode.h  GuardNode.h  HistoryNode.h  InvokeNode.h  NodeFactory.h  ParallelNode.h  ParallelStateNode.h  ParamNode.h  ScriptNode.h  SendNode.h  StateNode.h  TransitionNode.h  types.h
generator/include/events/: Event.h  EventQueue.h
generator/include/factory/: INodeFactory.h  NodeFactory.h
generator/include/impl/: ActionNode.h  DataModelItem.h  InvokeNode.h  StateNode.h
generator/include/model/: DocumentModel.h  DoneData.h  IActionNode.h  IContentNode.h  IDataModelItem.h  IDataNode.h  IExecutionContext.h  IForeachNode.h  IGuardNode.h  IHistoryNode.h  IInvokeNode.h  INodeFactory.h  IParallelNode.h  IParamNode.h  IScriptNode.h  ISendNode.h  IStateNode.h  ITransitionNode.h  IXIncludeProcessor.h  ParsingContext.h  SCXMLContext.h  SCXMLModel.h  StateHierarchy.h  StateHierarchyManager.h
generator/include/parsing/: ActionParser.h  DataModelParser.h  DocumentParser.h  (+11 more)
generator/src/: GuardUtils.cpp  Logger.cpp
rsm/: CMakeLists.txt
rsm/include/: GuardUtils.h  Logger.h  ReadySCXMLEngine.h  SCXMLEngine.h  SCXMLTypes.h  types.h
rsm/src/: ReadySCXMLEngineImpl.cpp
scxml/runtime/: CMakeLists.txt  Event.h  JSEngine.cpp  JSEngine.h  JSEngine_example.cpp  JSEngine_impl.cpp  JSResult.h  SCXMLEngineImpl.cpp  SCXMLEngineImpl.h
tests/: CMakeLists.txt  W3CEventTestHelper.h  rsm_scxml_tests  simple_scxml_test.cpp
tests/actions/: AssignActionTest.cpp  ForeachActionTest.cpp  ScriptActionTest.cpp
tests/benchmarks/: CMakeLists.txt  EventSchedulerBenchmark.cpp  JSEngineBenchmark.cpp  StateMachineBenchmark.cpp
tests/codegen/: CMakeLists.txt  test_static_codegen.cpp
tests/common/: EventDataHelperTest.cpp  TestUtils.h
tests/compliance/: ComplianceTestCommon.h
tests/concurrency/: DeadlockReproductionTest.cpp  TypeRegistryThreadSafetyTest.cpp
tests/core/: ActionNodeTest.cpp  CoreTestCommon.h  DataModelTest.cpp  SCXMLParserBasicTest.cpp  StateNodeTest.cpp  TransitionNodeTest.cpp  TypeRegistryTest.cpp
tests/engine/: DataModelTest.cpp  EventSystemTest.cpp  JSEngineBasicTest.cpp  JSResultTypeConversionTest.cpp  SessionManagementTest.cpp  SimpleDebugTest.cpp  StateMachineTest.cpp
tests/examples/: ExampleTestCommon.h  StateMachineTest.cpp
tests/generator/: ParserBasicTest.cpp  ParserCommunicationTest.cpp  ParserDataModelTest.cpp  ParserErrorTest.cpp  ParserEventTest.cpp  ParserExecutableTest.cpp  ParserHistoryTest.cpp  ParserInvokeTest.cpp  ParserStateTest.cpp  ParserTransitionTest.cpp  SCXMLParserBasicTest.cpp  SCXMLParserCommunicationTest.cpp  SCXMLParserDataModelTest.cpp  SCXMLParserErrorTest.cpp  SCXMLParserEventTest.cpp  SCXMLParserExecutableTest.cpp  SCXMLParserHistoryTest.cpp  SCXMLParserInvokeTest.cpp  SCXMLParserStateTest.cpp  SCXMLParserTestCommon.h  SCXMLParserTransitionTest.cpp
tests/integration/: ActionIntegrationTest.cpp  ActionSystemIntegrationTest.cpp  ConcurrentCompletionMonitoringTest.cpp  EventSchedulingTest.cpp  ExternalTransitionHandlerTest.cpp  HistoryStateIntegrationTest.cpp  HttpEventTargetTest.cpp  IntegrationTestCommon.cpp  IntegrationTestCommon.h  ParallelStateComponentTest.cpp  ParallelStateEndToEndTest.cpp  ParallelStateEventBroadcastingTest.cpp  ParallelStateIntegrationTest.cpp  ParsingSystemIntegrationTest.cpp  Phase2IntegrationTest.cpp  RuntimeSystemIntegrationTest.cpp  SCXMLEventTest.cpp  SCXMLForeachIntegrationTest.cpp  SCXMLParallelComplianceTest.cpp  SCXMLParallelParsingTest.cpp  SimpleMockHttpServer.cpp  SimpleMockHttpServer.h  StateMachineIntegrationTest.cpp  StaticCodegenIntegrationTest.cpp  Thermostat_sm.h  test_thermostat.scxml
tests/js_engine/: DataModelTest.cpp  EventSystemTest.cpp  SessionManagementTest.cpp  SimpleDebugTest.cpp
tests/mocks/: MockActionExecutor.cpp  MockActionExecutor.h  MockActionNode.h  MockDataModelEngine.h  MockDataModelItem.h  MockEventRaiser.cpp  MockEventRaiser.h  MockExecutionContext.h  MockGuardNode.h  MockInvokeNode.h  MockNodeFactory.h  MockRuntimeContext.h  MockStateNode.h  MockTransitionNode.h  MockXIncludeProcessor.h
tests/parser/: CommunicationParserTest.cpp  DataModelParserTest.cpp  DocumentParserTest.cpp  ErrorParserTest.cpp  EventParserTest.cpp  ExecutableContentParserTest.cpp  HistoryParserTest.cpp  InvokeParserTest.cpp  ParserTestCommon.h  StateNodeParserTest.cpp  TransitionParserTest.cpp  XSDValidatorTest.cpp
tests/performance/: ParsingPerformanceTest.cpp  PerformanceTestCommon.h
tests/runtime/: ActionExecutorImplTest.cpp  GuardEvaluatorTest.cpp  HistoryManagerTest.cpp  QuickJSComplexExpressionTest.cpp  RuntimeTestCommon.h  SCXMLJavaScriptAdvancedIntegrationTest.cpp  SCXMLJavaScriptIntegrationTest.cpp
tests/states/: ConcurrentRegionTest.cpp
tests/w3c/: TXMLConverterTest.cpp  W3CComplianceTest.cpp  W3CHttpTestServer.cpp  W3CHttpTestServer.h  W3CTestCLI.cpp  W3CTestRunner.cpp  W3CTestRunner.h
tests/w3c_compliance/: EventSystemComplianceTest.cpp  RuntimeStateIntegrationTest.cpp  SendReceiveComplianceTest.cpp  W3CSpecificTest.cpp  W3CTestCaseGeneratorTest.cpp  W3CUnifiedTest.cpp
tests/w3c_static_cli/: main.cpp
tools/codegen/: CMakeLists.txt  StaticCodeGenerator.cpp  StaticCodeGenerator.h  codegen.py  main.cpp  requirements.txt  scxml_parser.py
(+929 files in other folders)
